# fasti-kit

./: .dockerignore  .env.example  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1f41e9d3550c_update_user_table.py  2d9d6c357408_add_revoked_token_table.py  31158b0215ba_update_user_table.py  42275bfc1260_create_user_table.py  8292c482c5c2_add_is_pending_verification_jti_in_the_.py  835e3a37c61f_create_user_table.py  e64abc0807d1_add_is_verified_column_in_the_user_table.py  ff2fd6286f38_add_pending_password_reset_jti_to_users.py
auth/: dependencies.py
auth/entities/: __init__.py  revoked_token.py
auth/models/: __init__.py  revoked_token_model.py
auth/repositories/: __init__.py  revoked_token_repository.py
auth/routes/: __init__.py  auth_router.py
auth/schemas/: __init__.py  auth_schema.py
auth/services/: __init__.py  email_verfication_service.py  email_verification_service.py  password_reset_service.py  security_service.py  token_service.py
core/: database.py  mail.py  models.py  setting.py  startup_checks.py
scripts/: _boilerplate.py  create_all.py  create_domain.py  create_entity.py  create_model.py  create_repository.py  create_route.py  create_schema.py  create_service.py
user/entities/: user.py
user/models/: __init__.py  user_model.py
user/repositories/: user_repository.py
user/routes/: __init__.py  user_router.py
user/schemas/: __init__.py  user_schema.py
user/services/: user_service.py
