[project]
name = "fasti-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.2",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
    "asyncpg>=0.31.0",
    "uvloop>=0.22.1",
    "httptools>=0.8.0",
    "pyjwt>=2.13.0",
    "authx>=1.7.1",
    "bcrypt>=5.0.0",
    "slowapi>=0.1.10",
    "fastapi-mail[aioredis,httpx]>=1.6.5",
]

[project.scripts]
create-domain = "scripts.create_domain:main"
create-entity = "scripts.create_entity:main"
create-model = "scripts.create_model:main"
create-repository = "scripts.create_repository:main"
create-service = "scripts.create_service:main"
create-schema = "scripts.create_schema:main"
create-route = "scripts.create_route:main"
create-all = "scripts.create_all:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pyright>=1.1.411",
    "ruff>=0.15.21",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["core*", "user*", "scripts*"]

